--- a/data/colors.yml
+++ b/data/colors.yml
@@ -1,5 +1,5 @@
-default: dark  # light
-auto_switch: false  # set to true to respect the user preference
+default: light # light
+auto_switch: true # set to true to respect the user preference
 dark:
   bg: '#242629'  # main site background
   hl_bg: '#34363b'  # card and circle navigation background color for paper card mode
@@ -11,7 +11,7 @@ dark:
     bg: '#34363b'  # sidebar background
     fg: 'white'  # sidebar font color
 light:
-  bg: '#f5f5f5'
+  bg: '#deddda'
   hl_bg: '#e6e6e6'
   fg: '#262625'
   dim_fg: '#40403e'
