Set the site theme to 'dark' regardless of User preferences.

--- a/data/colors.yml
+++ b/data/colors.yml
@@ -1,5 +1,5 @@
-default: light # light
-auto_switch: true # set to true to respect the user preference
+default: dark # light
+auto_switch: false # set to true to respect the user preference
 dark:
   bg: '#242629'  # main site background
   hl_bg: '#34363b'  # card and circle navigation background color for paper card mode
